// Vitest Snapshot v1

exports[`plugins/swc > should add browserslist 1`] = `
{
  "builtins": {
    "decorator": {
      "legacy": true,
    },
    "presetEnv": {
      "coreJs": "3.27",
      "mode": "entry",
      "targets": [
        "chrome 98",
      ],
    },
  },
  "entry": {
    "main": [
      "rspack-polyfill.js",
      "src/index.js",
    ],
  },
  "module": {},
  "plugins": [
    RspackVirtualModulePlugin {},
  ],
  "resolve": {
    "alias": {
      "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
    },
  },
}
`;

exports[`plugins/swc > should add browserslist 2`] = `
{
  "builtins": {
    "decorator": {
      "legacy": true,
    },
    "presetEnv": {
      "coreJs": "3.27",
      "mode": "entry",
      "targets": [
        "chrome 98",
      ],
    },
  },
  "entry": {
    "main": [
      "rspack-polyfill.js",
      "src/index.js",
    ],
  },
  "module": {},
  "plugins": [
    RspackVirtualModulePlugin {},
  ],
  "resolve": {
    "alias": {
      "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
    },
  },
}
`;

exports[`plugins/swc > should add pluginImport 1`] = `
{
  "builtins": {
    "decorator": {
      "legacy": true,
    },
    "pluginImport": [
      {
        "libraryName": "foo",
      },
    ],
    "presetEnv": {
      "coreJs": "3.27",
      "mode": "entry",
      "targets": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
  },
  "entry": {
    "main": [
      "rspack-polyfill.js",
      "src/index.js",
    ],
  },
  "module": {},
  "plugins": [
    RspackVirtualModulePlugin {},
  ],
  "resolve": {
    "alias": {
      "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
    },
  },
}
`;

exports[`plugins/swc > should disable preset_env in target other than web 1`] = `
{
  "builtins": {
    "decorator": {
      "legacy": true,
    },
    "presetEnv": {
      "targets": [
        "node >= 14",
      ],
    },
  },
  "entry": {
    "main": [
      "src/index.js",
    ],
  },
  "module": {},
}
`;

exports[`plugins/swc > should disable preset_env mode 1`] = `
{
  "builtins": {
    "decorator": {
      "legacy": true,
    },
    "presetEnv": {
      "mode": undefined,
      "targets": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
  },
  "entry": {
    "main": [
      "src/index.js",
    ],
  },
  "module": {},
}
`;

exports[`plugins/swc > should enable entry mode preset_env 1`] = `
{
  "builtins": {
    "decorator": {
      "legacy": true,
    },
    "presetEnv": {
      "coreJs": "3.27",
      "mode": "entry",
      "targets": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
  },
  "entry": {
    "main": [
      "rspack-polyfill.js",
      "src/index.js",
    ],
  },
  "module": {},
  "plugins": [
    RspackVirtualModulePlugin {},
  ],
  "resolve": {
    "alias": {
      "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
    },
  },
}
`;

exports[`plugins/swc > should has correct core-js 1`] = `
{
  "builtins": {
    "decorator": {
      "legacy": true,
    },
    "presetEnv": {
      "coreJs": "3.27",
      "mode": "entry",
      "targets": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
  },
  "entry": {
    "main": [
      "rspack-polyfill.js",
      "src/index.js",
    ],
  },
  "module": {},
  "plugins": [
    RspackVirtualModulePlugin {},
  ],
  "resolve": {
    "alias": {
      "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
    },
  },
}
`;

exports[`plugins/swc > should has correct core-js 2`] = `
{
  "builtins": {
    "decorator": {
      "legacy": true,
    },
    "presetEnv": {
      "coreJs": "3.27",
      "mode": "entry",
      "targets": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
  },
  "entry": {
    "main": [
      "rspack-polyfill.js",
      "src/index.js",
    ],
  },
  "module": {},
  "plugins": [
    RspackVirtualModulePlugin {},
  ],
  "resolve": {
    "alias": {
      "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
    },
  },
}
`;

exports[`plugins/swc > should has correct core-js 3`] = `
{
  "builtins": {
    "decorator": {
      "legacy": true,
    },
    "presetEnv": {
      "targets": [
        "node >= 14",
      ],
    },
  },
  "entry": {
    "main": [
      "src/index.js",
    ],
  },
  "module": {},
}
`;

exports[`plugins/swc > should'n override browserslist when target platform is not web 1`] = `
{
  "builtins": {
    "decorator": {
      "legacy": true,
    },
    "presetEnv": {
      "coreJs": "3.27",
      "mode": "entry",
      "targets": [
        "> 0.01%",
        "not dead",
        "not op_mini all",
      ],
    },
  },
  "entry": {
    "main": [
      "rspack-polyfill.js",
      "src/index.js",
    ],
  },
  "module": {},
  "plugins": [
    RspackVirtualModulePlugin {},
  ],
  "resolve": {
    "alias": {
      "core-js": "<WORKSPACE>/node_modules/<PNPM_INNER>/core-js",
    },
  },
}
`;
